2018-08-26  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Remove unneeded compiler and language tags

2018-08-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/calendars.cpp (addHolidays, removeHolidays): New functions
	* man/Calendars.Rd: Added documentation

2018-08-16  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Prettification for Travis file

2018-08-14  Dirk Eddelbuettel  <edd@debian.org>

	* docker/Dockerfile: Add Dockerfile to create test container

	* .travis.yml: Adapted to use Docker container

2018-08-13  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Try 20 minute timeout parameter

2018-08-11  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Updated to mention renewed Windows support

2018-08-10  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.4.5

        * configure.ac: Mark as 0.4.5
        * configure: Rebuilt

	* src/Makevars.in: Set CXX_STD=CXX11
	* src/Makevars.win: Idem

2018-04-29  Dirk Eddelbuettel  <edd@debian.org>

	* man/AffineSwaption.Rd: Do not run example as win32 is fragile
	* man/BermudanSwaption.Rd: Idem
	* man/DiscountCurve.Rd: Idem

	* .Rbuildignore: Also ignore .tar.gz

	* inst/include/RQuantLib_RcppExports.h: Updated via
	current Rcpp::compileAttributes() version
	* src/RcppExports.cpp: Idem

2018-04-27  Jeroen Ooms  <jeroenooms@gmail.com>

	* src/Makevars.win: Rewritten using rwinlib repo for Quantlib library

	* tools/winlibs.R: New helper script to gather libraries from repo

	* DESCRIPTION: Remove 'OS_type: unix'

2018-01-07  Dirk Eddelbuettel  <edd@debian.org>

	* src/affine.cpp (affineWithRebuiltCurveEngine): Remove
	declaration and assignment of one unused variable
	* src/bermudan.cpp (bermudanFromYieldEngine): Idem
	* src/sabr.cpp (sabrengine): Idem (twice); also rename one
	variable ('todaysDate') to its parameter name ('tradeDate')

2018-01-01  Dirk Eddelbuettel  <edd@debian.org>
